task-2-play-with-k8s/step-4/washere.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: washere
  labels:
    # We need to be able to use node agents that are able to mount snapshots.
    # That will require root privileges, thus we need a completely unrestricted namespace for this.
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: washere
  name: washere
  namespace: washere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: washere
  strategy: {}
  template:
    metadata:
      labels:
        app: washere
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
        - image: docker.io/nginxinc/nginx-unprivileged:1-alpine-slim
          name: webserver
          resources: {}
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: htdocs
              mountPath: /usr/share/nginx/html
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: htdocs
          persistentVolumeClaim:
            claimName: washere-volume
            readOnly: false
        - name: bash-script
          configMap:
            defaultMode: 484
            name: create-indexfile
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: washere
  name: washere
  namespace: washere
spec:
  ports:
    - name: webserver
      appProtocol: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: washere
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: washere
  namespace: washere
spec:
  rules:
    - host: washere.ct.gdcc.io
      http:
        paths:
          - backend:
              service:
                name: washere
                port:
                  number: 8080
            path: /
            pathType: Prefix
